# the_youtuber_rag

./: .gitignore  README.md  api.py  function_app.py  ingestion.py  pyproject.toml  requirements.txt
backend/: data_models.py  rag.py
frontend/: app.py
